--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!-- Archivo: index.html
-
 Proyecto: -->
 <!DOCTYPE html>
 <html lang="es">
@@ -83,7 +82,8 @@ Proyecto: -->
       </a>
     </div>
     <!-- Contenido derecha -->
-
+   
+  </nav>
   <!-- Contenido de la página -->
   <main id="main" class="main">
     <!-- Sección sobre el proyecto -->
@@ -271,12 +271,12 @@ Proyecto: -->
     <div class="footer__container">
       <div class="footer__item">
         <a href="https://www.uam.mx/" target="_blank">
-          <img class="footer__image" src="assets/img/" />
+          <img class="footer__image" src="assets/img" />
         </a>
       </div>
       <div class="footer__item">
         <a href="http://dccd.cua.uam.mx/inicio" target="_blank">
-          <img class="footer__image" src="assets/img/" />
+          <img class="footer__image" src="assets/img" />
         </a>
       </div>
       <div class="footer__item">
