--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Proyecto: -->
       <strong> 7 </strong>
       <!-- Datos de profesorado -->
 <h3>Profesor:</h3>
-      Dr. Taboada
+   Juan Pablo Israel Taboada Gomez
    
       <h2 id="a1">LA EMPRESA</h2>
       <p><strong>Quienes somos?</strong></p>
@@ -154,7 +154,6 @@ Proyecto: -->
         
 <p><strong>Lealtad:</strong> nuestro negocio se basa en relaciones de largo plazo con nuestros clientes, proveedores y personal donde prevalece la estrategia ganar-ganar.&nbsp;</p>
         <p><strong>Integridad:</strong> privilegiando los intereses y la confidencialidad de la información de nuestros clientes, cuidando a nuestro personal y respetando las normativas legales de peru. 
-		<p><strong>Solidaridad:</strong> Apoyo y cooperación con la Comunidad.&nbsp;</p>
 	      <p><strong>Respeto:</strong> aceptamos las características individuales de nuestros semejantes, comprendemos nuestras limitaciones y las de otros en beneficio de las relaciones interpersonales y laborales. </p></ul>
       </figure>
       <h2 id="a3">Submenu 3</h2>
