--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Proyecto: -->
       <div class="keywords">
         <ul>
           <li class="keywords__item"><i class='bx bxs-circle circle'></i>Rios Alzamora Jesús</li>
-          <br><li class="keywords__item"><i class='bx bxs-circle circle'></i>Miguelito</li>
+          <br><li class="keywords__item"><i class='bx bxs-circle circle'></i>Ccahuana Aranibar Miguel Angel</li>
           
        
         </ul>
