--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Proyecto: -->
       <div>
         <h3>Carrera <img class="logo__img" height="30" width="50" src="assets/img/carrera.png"></h3>
       </div>
-      <p>Ingenieria Industrial&nbsp;&nbsp;</p>
+      <p>Ingeniería Industrial&nbsp;&nbsp;</p>
       <h3>CICLO:&nbsp;</h3>
       <strong> 7 </strong>
       <!-- Datos de profesorado -->
