--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Proyecto: -->
       <li class="sidebar__item">
         <a class="sidebar__link active" href="#about">
           <i class='bx bxs-directions sidebar__icon'></i>
-          <span class="sidebar__text">INICIO&nbsp;</span>
+          <span class="sidebar__text">DIAGNOSTICO&nbsp;</span>
         </a>
         <ul class="sidebar__submenu">
           <li class="submenu__item">
