--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Proyecto: -->
         <ul class="sidebar__submenu">
           <li class="submenu__item">
             <a class="submenu__link" href="#a1">
-              <span class="submenu__text">La Empresa&nbsp;&nbsp;</span>
+              <span class="submenu__text">Area de Estudio&nbsp;&nbsp;</span>
             </a>
           </li>
           <li class="submenu__item">
