--- a/index.html
+++ b/index.html
@@ -144,12 +144,13 @@ Proyecto: -->
 	      <p><strong>Respeto:</strong> aceptamos las características individuales de nuestros semejantes, comprendemos nuestras limitaciones y las de otros en beneficio de las relaciones interpersonales y laborales. </p></ul>
       </figure>
       <h2 id="a3">Submenu 3</h2>
-      <p>Eu elit sit voluptate elit consequat quis aliquip nostrud incididunt aliqua. Nulla eu incididunt voluptate
-        veniam qui ipsum eu eiusmod sint. Eiusmod labore amet in sint. Sint consequat magna eiusmod quis reprehenderit
-        et enim minim fugiat mollit est.</p>
-      <p>Velit eu minim aute culpa laborum sit elit laboris consequat aliqua nostrud velit minim enim. Tempor
-        adipisicing nostrud nulla Lorem Lorem labore cillum occaecat culpa. Laborum pariatur culpa dolore incididunt
-        sint eiusmod aute ea voluptate.</p>
+      <p><div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFvA_ZsnsU&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div></p>
       <hr />
 	
 	<h2 id="a4">Submenu 4</h2>
