--- a/index.html
+++ b/index.html
@@ -65,13 +65,25 @@ Proyecto: -->
       <li class="sidebar__item">
         <a class="sidebar__link" href="#components">
           <i class='bx bxs-extension bx-rotate-270 sidebar__icon'></i>
-          <span class="sidebar__text">componentes</span>
+          <span class="sidebar__text">PLANIFICACIÓN</span>
+        </a>
+      </li>
+	     <li class="sidebar__item">
+        <a class="sidebar__link" href="#components">
+          <i class='bx bxs-extension bx-rotate-270 sidebar__icon'></i>
+          <span class="sidebar__text">EJECUCIÓN</span>
+        </a>
+      </li>
+	     <li class="sidebar__item">
+        <a class="sidebar__link" href="#components">
+          <i class='bx bxs-extension bx-rotate-270 sidebar__icon'></i>
+          <span class="sidebar__text">EVLUACIÓN</span>
         </a>
       </li>
       <li class="sidebar__item">
         <a class="sidebar__link" href="#downloads">
           <i class='bx bxs-download sidebar__icon'></i>
-          <span class="sidebar__text">Descargas</span>
+          <span class="sidebar__text">DESCARGAS</span>
         </a>
       </li>
     </ul>
