--- a/index.html
+++ b/index.html
@@ -30,16 +30,12 @@ Proyecto: -->
 
 		<nav class="navegacion">
 			<ul class="menu">
-				
+	
 				<!-- TITULAR -->
-				 <div class="logo">
+					 <div class="logo">
           <img class="logo__img" width="150" height="150" src="assets/img/logo2.jpg">
-          <!-- Título del sitio -->
-          <a class="sidebar__titulo" href="#">
-          <span class="sidebar__titulo sidebar__titulo-destacado">SUMIDEROS Z&G<span>
-             
-            </span>
-          </a>
+					 <br>
+					 <h2> <b> SUMIDEROS Z&G</b></h2>
         </div>
 				<!-- TITULAR -->
 
