--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Proyecto: -->
         </div>
 				<!-- TITULAR -->
 
-				<li><a href="#a1"><span class="fa fa-home icon-menu"></span>Inicio</a></li>
+				<li><a href="#about"><span class="fa fa-home icon-menu"></span>Inicio</a></li>
 
 				<li class="item-submenu" menu="1">
 					<a href="#"><span class="fa fa-suitcase icon-menu"></span>Servicios</a>
@@ -78,7 +78,7 @@ Proyecto: -->
     <!-- Sección sobre el proyecto -->
     <!-- Encabezado con nombre del proyecto -->
     <div id="about" class="card">
-<div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
+<div id="about" style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
