--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@ Proyecto: -->
       <h2 >Misión</h2>
       <figure class="image">
         <figcaption>
-          <p >Nuestra misión es satisfacer las necesidades de nuestros clientes, siendo un proveedor de productos de calidad, con precios competitivos, desarrollando al personal, que es nuestro principal activo, para contribuir con el crecimiento industrial de la nación.&nbsp;</p>
+          <p >Somos una empresa dedicada a la elaboración de productos de griferías a nivel nacional, enfocados en satisfacer la necesidad de productos de buena calidad, distribuyendo a otras empresas mayoristas, supermercados y minoristas para la adquisición del consumidor final. .&nbsp;</p>
         </figcaption>
 		  <h2 id="a2">Visión</h2>
-	    <p>Consolidarnos como una Empresa líder en la Fabricación  , que satisfaga los requerimientos de nuestros clientes en cuanto a entregas oportunas, asistencia técnica y calidad de servicio, a través de un equipo de trabajo competente e identificado con los valores de la empresa.</p>
+	    <p>Consolidarnos como una Empresa líder en la Fabricación  , que satisfaga los requerimientos de nuestros clientes alcanzando el liderazgo y reconocimiento en el mercado de la región, como el más grande productor de productos de griferías, sobre las bases de calidad y servicio hacia nuestros clientes y lograr la fidelidad de los mismos mediante la oferta de una excelente relación precio-valor. Lograr niveles superiores de excelencia en todas las actividades de la empresa, incluyendo el tratamiento responsable del medio ambiente.</p>
 	    <h2 id="a2">Principios de la empresa <img height="50" width="50" class="logo__img" src="assets/img/logo2.jpg"></h2>
 		  
 <p><strong>Compromiso: </strong>ser capaces de satisfacer y superar las exigencias de los clientes, con eficiencia, calidad, tiempo y en la forma requerida por las especificaciones técnicas y preservando el medio ambiente.&nbsp;</p>
