--- a/index.html
+++ b/index.html
@@ -158,12 +158,15 @@ Proyecto: -->
         <p><strong>Integridad:</strong> privilegiando los intereses y la confidencialidad de la información de nuestros clientes, cuidando a nuestro personal y respetando las normativas legales de peru. 
 		<p><strong>Solidaridad:</strong> Apoyo y cooperación con la Comunidad.&nbsp;</p>
 	      <p><strong>Respeto:</strong> aceptamos las características individuales de nuestros semejantes, comprendemos nuestras limitaciones y las de otros en beneficio de las relaciones interpersonales y laborales. </p></ul>
+      <p><strong>Adaptabilidad:</strong> Hemos pasado tiempos difíciles y hemos podido salir adelante. </p></ul>
+     
+      
       </figure>
       <h2 id="a3">ORGANIGRAMA</h2>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 95%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFvA_ZsnsU&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div></p>
@@ -173,7 +176,7 @@ Proyecto: -->
       <p> <div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 95%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFvGz0WLc8&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
