--- a/index.html
+++ b/index.html
@@ -151,11 +151,10 @@ Proyecto: -->
 	<h2 id="a2">Principios de la empresa </h2>
 		  
 <p><strong>Compromiso: </strong>ser capaces de satisfacer y superar las exigencias de los clientes, con eficiencia, calidad, tiempo y en la forma requerida por las especificaciones técnicas y preservando el medio ambiente.&nbsp;</p>
-        
-<p><strong>Lealtad:</strong> nuestro negocio se basa en relaciones de largo plazo con nuestros clientes, proveedores y personal donde prevalece la estrategia ganar-ganar.&nbsp;</p>
-        <p><strong>Integridad:</strong> privilegiando los intereses y la confidencialidad de la información de nuestros clientes, cuidando a nuestro personal y respetando las normativas legales de peru. 
-		<p><strong>Solidaridad:</strong> Apoyo y cooperación con la Comunidad.&nbsp;</p>
-	      <p><strong>Respeto:</strong> aceptamos las características individuales de nuestros semejantes, comprendemos nuestras limitaciones y las de otros en beneficio de las relaciones interpersonales y laborales. </p></ul>
+<p><strong>Lealtad:</strong> nuestro negocio se basa en relaciones de largo plazo con nuestros clientes, proveedores y personal.&nbsp;</p>
+<p><strong>Integridad:</strong> privilegiando los intereses y la confidencialidad de la información de nuestros clientes, cuidando a nuestro personal y respetando las normativas legales. 
+<p><strong>Solidaridad:</strong> Apoyo y cooperación con la Comunidad.&nbsp;</p>
+<p><strong>Respeto:</strong> aceptamos las características individuales de nuestros semejantes, comprendemos nuestras limitaciones y las de otros. </p></ul>
 		  <h2><p><strong>Valores de la empresa&nbsp; :</strong></p></h2>
       <p><B>Integridad:</B>  Se honesto, consecuente con tus accionesy fiel a tus principios éticos.<br> </p>
 		 <p> <B>Transparencia:</B>  Ser auténtico y confiable.<br> </p>
