--- a/index.html
+++ b/index.html
@@ -155,11 +155,12 @@ Proyecto: -->
 <p><strong>Integridad:</strong> privilegiando los intereses y la confidencialidad de la información de nuestros clientes, cuidando a nuestro personal y respetando las normativas legales. 
 <p><strong>Solidaridad:</strong> Apoyo y cooperación con la Comunidad.&nbsp;</p>
 <p><strong>Respeto:</strong> aceptamos las características individuales de nuestros semejantes, comprendemos nuestras limitaciones y las de otros. </p></ul>
-		  <h2><p><strong>Valores de la empresa&nbsp; :</strong></p></h2>
-      <p><B>Integridad:</B>  Se honesto, consecuente con tus accionesy fiel a tus principios éticos.<br> </p>
-		 <p> <B>Transparencia:</B>  Ser auténtico y confiable.<br> </p>
-		<p><B> Empatía:</B>  El trabajo en equipo siempre trae grandes resultados .<br> </p>
-		 <p><B> Respeto:</B>  Valorar a las personas y reconocer sus méritos.<br> </p><br>
+
+<h2><p><strong>Valores de la empresa&nbsp; :</strong></p></h2>
+<p><B>Integridad:</B>  Ser honesto, consecuente con tus accionesy fiel a tus principios éticos.<br> </p>
+<p> <B>Transparencia:</B>  Ser auténtico y confiable.<br> </p>
+<p><B> Empatía:</B>  El trabajo en equipo siempre trae grandes resultados .<br> </p>
+<p><B> Respeto:</B>  Valorar a las personas y reconocer sus méritos.<br> </p><br>
       </figure>
       <h2 id="a3">ORGANIGRAMA</h2>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
