--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@ Proyecto: -->
 
 						<li><a href="#a1">Area De Estudio</a></li>
 						<li><a href="#a2">Misión/Visión</a></li>
-						<li><a href="#a3">Organigrama</a></li>
-						<li><a href="#a4">Cronograma</a></li>
+						<li><a href="#a3">Ubicación</a></li>
+						<li><a href="#a4">Organigrama</a></li>
+						<li><a href="#a5">Cronograma</a></li>
 					</ul>
 				</li>
 
