--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@ Proyecto: -->
 						<li><a href="#a1">Area De Estudio</a></li>
 						<li><a href="#a2">Misión/Visión</a></li>
 						<li><a href="#a3">Ubicación</a></li>
-						<li><a href="#a4">Organigrama</a></li>
-						<li><a href="#a5">Cronograma</a></li>
+						<li><a href="#a4">Objetivos</a></li>
+						<li><a href="#a5">Organigrama</a></li>
+						<li><a href="#a6">Cronograma</a></li>
 					</ul>
 				</li>
 
@@ -167,9 +168,31 @@ Proyecto: -->
  <h2 id="a3">UBICACION GEOGRAFICA</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15599.595646346019!2d-76.9409452!3d-12.1872812!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105b919c3d4badd%3A0xc9e013ac3d7818c2!2sGrifer%C3%ADa%20Sumideros%20Z%26G!5e0!3m2!1ses-419!2spe!4v1694806365705!5m2!1ses-419!2spe" align="center" width=90% height="680" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div></p>
+
+   <h2 id="a4">OBJETIVOS</h2>
+      <figure class="image">
+        <figcaption>
+		<p><strong>Objetivo General</strong></p>
+      <p>Diseñar un Plan de Valorización de Residuos Sólidos para Sumideros Z&G.</p><br>
+
+		
+<p><strong>Objetivos Especificos</strong>&nbsp;</p>
+<p><B>Identificar las características de los residuos sólidos.</B> <br> </p>
+<p><B>Analizar las alternativas de valorización de residuos sólidos generados.</B> <br> </p>
+<p><B>Determinar la rentabilidad de la valorización económica de los residuos sólidos generados.</B> <br> </p>
+<p><B>Formular medidas de manejo de residuos sólidos.</B> <br> </p>
+
+		<p><strong>Justificación</strong></p>
+<p>Dentro de los Objetivos de Desarrollo Sostenible (ODS), específicamente en el ODS 11, se encuentra la Meta 11.6, que tiene como objetivo reducir el impacto ambiental negativo por persona de las ciudades para el año 2030. Esta meta se centra en aspectos como la calidad del aire y la gestión de los desechos municipales, así como otros tipos de residuos. Además, en el ODS 12, la Meta 12.5 busca disminuir significativamente la generación de residuos a través de actividades como la prevención, la reducción, el reciclaje y la reutilización (Naciones Unidas, 2015).
+La valorización de residuos es un principio fundamental que se establece en la Ley de Gestión Integral de Residuos Sólidos. En su artículo 5, inciso b, se da prioridad a la valorización de los residuos sólidos generados en actividades de producción y consumo, considerando su potencial utilidad en diversas aplicaciones. Además, en el inciso c del mismo artículo, se promueve el principio de Responsabilidad Extendida del Productor, fomentando el uso de productos eficientes que faciliten su valorización y minimicen su impacto ambiental, tal como lo señala el Ministerio del Ambiente (MINAM, 2016).
+El propósito de esta investigación es ofrecer una solución alternativa para abordar la contaminación causada por los residuos generados por microempresas, con un enfoque particular en la evaluación de Sumideros Z&G, cuya principal fuente de residuos son los materiales particulados. Estos residuos peligrosos conllevan riesgos para la salud, como trastornos respiratorios debido a la posible inhalación, así como problemas cutáneos que incluyen acné, irritación, dermatitis, sensibilización de la piel y sequedad, según el Centro de Información de Sustancias Químicas, Emergencias y Medio Ambiente. Sin embargo, es factible reutilizar algunos de estos residuos peligrosos.
+Además de abordar la problemática de la contaminación causada por los residuos, esta investigación también tiene como objetivo recopilar datos sobre la generación de diversos tipos de residuos por parte de empresas del mismo sector, con el fin de proporcionar una base sólida de información para futuros proyectos y estudios relacionados.</p><br>
       
+        </figcaption>
+      </figure>
+	 
 	
-	<h2 id="a4">ORGANIGRAMA</h2>
+	<h2 id="a5">ORGANIGRAMA</h2>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
@@ -179,7 +202,7 @@ Proyecto: -->
 </div></p>
 
       
-    <h2 id="a5">CRONOGRAMA</h2>
+    <h2 id="a6">CRONOGRAMA</h2>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
