--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@ Proyecto: -->
    <h2 id="a4">OBJETIVOS</h2>
       <figure class="image">
         <figcaption>
-		<h2 ><p><strong>Objetivo General</strong></p></h2>h2 >
+		<h2 ><p><strong>Objetivo General</strong></p></h2><h2 >
       <p>Diseñar un Plan de Valorización de Residuos Sólidos para Sumideros Z&G.</p><br>
 
 		
-<h2 ><p><strong>Objetivos Especificos</strong>&nbsp;</p></h2>h2 >
+<h2 ><p><strong>Objetivos Especificos</strong>&nbsp;</p></h2><h2 >
 <p>Identificar las características de los residuos sólidos. <br> </p>
 <p><Analizar las alternativas de valorización de residuos sólidos generados.<<br> </p>
 <p>Determinar la rentabilidad de la valorización económica de los residuos sólidos generados.<br> </p>
