--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Proyecto: -->
       <figure class="image">
         <figcaption>
 		<h2 ><p><strong>Objetivo General</strong></p></h2>
-      <p>Diseñar un Plan de Valorización de Residuos Sólidos para Sumideros Z&G.</p><br>
+      <p>Diseñar un Plan de Valorización de Residuos Sólidos para Sumideros Z&G.</p>
 
 		
 <h2 ><p><strong>Objetivos Especificos</strong>&nbsp;</p></h2>
