--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Proyecto: -->
 <p>Identificar las características de los residuos sólidos. <br> </p>
 <p>Analizar las alternativas de valorización de residuos sólidos generados.<br> </p>
 <p>Determinar la rentabilidad de la valorización económica de los residuos sólidos generados.<br> </p>
-<p>Formular medidas de manejo de residuos sólidos. <br> </p>
+<p>Formular medidas de manejo de residuos sólidos. </p> <br>
 
 		<h2 ><p><strong>Justificación</strong></p></h2>
 <p>Dentro de los Objetivos de Desarrollo Sostenible (ODS), específicamente en el ODS 11, se encuentra la Meta 11.6, que tiene como objetivo reducir el impacto ambiental negativo por persona de las ciudades para el año 2030. Esta meta se centra en aspectos como la calidad del aire y la gestión de los desechos municipales, así como otros tipos de residuos. Además, en el ODS 12, la Meta 12.5 busca disminuir significativamente la generación de residuos a través de actividades como la prevención, la reducción, el reciclaje y la reutilización (Naciones Unidas, 2015).
