--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Proyecto: -->
 <img  height="200" width="200" class="" src="assets/img/EMPRESA.JPG">
 		
       <p><strong>Tipo de actividad: </strong>&nbsp;</p>
-      <p>Empresa 100% peruana que se dedica a la fabricación y venta por mayor de sumideros, registros mixtos, trampa campana, tapones de lavadero todo en 100% bronce.Según la clasificación nacional de actividades económicas, Sumideros Z&G se encuentra en sector de manufactura de productos  derivados del metal. </p>
+ <p>  Según la clasificación nacional de actividades económicas, Sumideros Z&G se encuentra en sector de manufactura de productos  derivados del metal. </p>
       <!-- Imágenes -->
       
 <p class="image__descriptor">
