--- a/index.html
+++ b/index.html
@@ -172,22 +172,21 @@ Proyecto: -->
    <h2 id="a4">OBJETIVOS</h2>
       <figure class="image">
         <figcaption>
+		<h2 ><p><strong>Justificación</strong></p></h2>
+<p>En la actualidad, las empresas se centran en una mejora constante para mantener su competitividad, considerando tanto la calidad de su servicio como los procedimientos internos que la conforman, con el objetivo de aumentar sus ganancias. Por lo tanto, el objetivo principal de este proyecto es optimizar la gestión logística en la empresa Sumideros Z&G, 
+ya que representa uno de los desafíos más significativos para la organización, dado que involucra diversas funciones clave que impactan en la eficiencia operativa y en la calidad del servicio ofrecido, lo que conlleva a una reducción de su rentabilidad.
+Además, este trabajo proporcionará a los autores la oportunidad de profundizar en los conocimientos adquiridos durante su formación profesional y servirá como una valiosa fuente de información para futuras investigaciones relacionadas con la gestión logística y la rentabilidad empresarial.
+</p><br>
 		<h2 ><p><strong>Objetivo General</strong></p></h2>
-      <p>Diseñar un Plan de Valorización de Residuos Sólidos para Sumideros Z&G.</p>
-
+	      <p>Proponer mejoras en la gestión logística a fin de incrementar la rentabilidad de la empresa de Sumideros Z&G</p>
 		
 <h2 ><p><strong>Objetivos Especificos</strong>&nbsp;</p></h2>
-<p>Identificar las características de los residuos sólidos. <br> </p>
-<p>Analizar las alternativas de valorización de residuos sólidos generados.<br> </p>
-<p>Determinar la rentabilidad de la valorización económica de los residuos sólidos generados.<br> </p>
-<p>Formular medidas de manejo de residuos sólidos. </p> <br>
-
-		<h2 ><p><strong>Justificación</strong></p></h2>
-<p>Dentro de los Objetivos de Desarrollo Sostenible (ODS), específicamente en el ODS 11, se encuentra la Meta 11.6, que tiene como objetivo reducir el impacto ambiental negativo por persona de las ciudades para el año 2030. Esta meta se centra en aspectos como la calidad del aire y la gestión de los desechos municipales, así como otros tipos de residuos. Además, en el ODS 12, la Meta 12.5 busca disminuir significativamente la generación de residuos a través de actividades como la prevención, la reducción, el reciclaje y la reutilización (Naciones Unidas, 2015).
-La valorización de residuos es un principio fundamental que se establece en la Ley de Gestión Integral de Residuos Sólidos. En su artículo 5, inciso b, se da prioridad a la valorización de los residuos sólidos generados en actividades de producción y consumo, considerando su potencial utilidad en diversas aplicaciones. Además, en el inciso c del mismo artículo, se promueve el principio de Responsabilidad Extendida del Productor, fomentando el uso de productos eficientes que faciliten su valorización y minimicen su impacto ambiental, tal como lo señala el Ministerio del Ambiente (MINAM, 2016).
-El propósito de esta investigación es ofrecer una solución alternativa para abordar la contaminación causada por los residuos generados por microempresas, con un enfoque particular en la evaluación de Sumideros Z&G, cuya principal fuente de residuos son los materiales particulados. Estos residuos peligrosos conllevan riesgos para la salud, como trastornos respiratorios debido a la posible inhalación, así como problemas cutáneos que incluyen acné, irritación, dermatitis, sensibilización de la piel y sequedad, según el Centro de Información de Sustancias Químicas, Emergencias y Medio Ambiente. Sin embargo, es factible reutilizar algunos de estos residuos peligrosos.
-Además de abordar la problemática de la contaminación causada por los residuos, esta investigación también tiene como objetivo recopilar datos sobre la generación de diversos tipos de residuos por parte de empresas del mismo sector, con el fin de proporcionar una base sólida de información para futuros proyectos y estudios relacionados.</p><br>
-      
+<p>Realizar un diagnóstico de la gestión logística en relación a la
+rentabilidad en la empresa Sumideros Z&G.<br> </p>
+<p>Diseñar estrategias de mejora en la gestión logística.<br> </p>
+<p>Calcular el beneficio-costo de la propuesta de implementación<br> </p>
+<p>Evaluación de Rendimiento estableciendo KPIs (Indicadores Clave de Rendimiento) </p> <br>
+		
         </figcaption>
       </figure>
 	 
