--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@ Proyecto: -->
 						<li class="go-back">Atras</li>
 
 						<li><a href="#a1">Area De Estudio</a></li>
-						<li><a href="#a2">Misión/Visión</a></li>
-						<li><a href="#a3">Ubicación</a></li>
+						<li><a href="#a2">Razon de Ser</a></li>
+						<li><a href="#a3">Ambito de Ejecución</a></li>
 						<li><a href="#a4">Objetivos</a></li>
 						<li><a href="#a5">Organigrama</a></li>
 						<li><a href="#a6">Cronograma</a></li>
+						<li><a href="#a7">Productos</a></li>
 					</ul>
 				</li>
 
