--- a/index.html
+++ b/index.html
@@ -345,9 +345,7 @@ rentabilidad en la empresa Sumideros Z&G.<br> </p>
       <!-- No quites esto  -->
       <hr class="footer__line" />
       <p class="info">Creada por Jesús Rios Alzamora <a
-          href="https://themes.3rdwavemedia.com/bootstrap-templates/product/coderdocs-free-bootstrap-5-documentation-template-for-software-projects/"
-          target="_blank">CV</a> y <a href=""
-          target="_blank">iPortfolio</a>.
+          href="https://themes.3rdwavemedia.com/bootstrap-templates/product/coderdocs-free-bootstrap-5-documentation-template-for-software-projects/"</a>.
       </p>
     </div>
   </footer>
