--- a/index.html
+++ b/index.html
@@ -221,109 +221,20 @@ rentabilidad en la empresa Sumideros Z&G.<br> </p>
 </div>
 	</div></p>
 	  
+	 <h2 id="a7">PRODUCTOS</h2>
+      <p> Para nuestro caso, nos apersonamos directamente ,esto habiendo recibido la carta de presentación dada por la universidad ,esta se nos entrego en la fecha 14/09/2023 .Para esta ocasión el compañero Ccahuana Aranibar,Miguel Ángel fue la persona quien se apersono a la empresa logrando contactar con el encargado del área de marketing Edil Campos .
+<b>Fecha de la visita:</b> 14/09/2023 <br>
+<b>Resultado de contacto:</b> <br>
+Se logro obtener información referente a la historia de la empresa,misión,visión,valores, áreas funcionales, organigrama y proceso logístico.<br>
+<b>Observaciones: </b><br>
+No se tenia mucha noción sobre las labores de los trabajadores en cada área ni los nombres de cada uno.<br>
+No existía un organigrama porque según se están organizando aun, pero se indico un aproximado.<br>
+Los trabajadores son algo reacios a contestar por el momento.<br>
+El proceso logistico no fue exacto,se requiere otras visitas<br>
+</div>
+	</div></p>
 	
 	
-	  
-    <!-- Sección componentes -->
-    <section id="components">
-      <h2 class="title">dwdwdwdwdw</h2>
-      <div class="components">
-        <!-- Python card -->
-        <div class="components__card">
-          <img class="components__img" src="assets/img/componentes/python.png" />
-          <div class="components__info">
-            <b>dwdwdw</b>
-            <p class="info__text">Como lenguaje de programacióndwdwdwprincipal</p>
-            <a href="https://www.python.org/" target="_blank" rel="external" class="button button-right">Ir al
-              sitio
-              oficial</a>
-          </div>
-        </div>
-        <!-- Flask card -->
-        <div class="components__card">
-          <img class="components__img" src="assets/img/componentes/flask.png" />
-          <div class="components__info">
-            <b>Fldwdask</b>
-            <p class="info__text">Se utilizó para la construcción del sitio web. Junto con HTML, CSS y
-              Javascript</p>
-            <a href="https://flask.palletsprojects.com/en/2.2.x/" target="_blank" rel="external"
-              class="button button-right">Ir
-              al sitio oficial</a>
-          </div>
-        </div>
-        <!-- MySQL card -->
-        <div class="components__card">
-          <img class="components__img" src="assets/img/componentes/mysql.png" />
-          <div class="components__info">
-            <b>MySQL</b>
-            <p class="info__text">Se utildwdws</p>
-            <a href="https://www.mysql.com/" target="_blank" rel="external" class="button button-right">Ir al sitio
-              oficial</a>
-          </div>
-        </div>
-        <!-- Python AgentSpeak card -->
-        <div class="components__card">
-          <img class="components__img" src="assets/img/componentes/pypi.png" />
-          <div class="components__info">
-            <b>Pythodwdwn-dwdwdw</b>
-            <p class="info__text">Un dwdw del lenguaje <em>Jason</em>, para el lenguaje
-              <em>Python</em>
-            </p>
-            <a href="https://pypi.org/project/agentspeak/" target="_blank" rel="external" class="button button-right">Ir
-              al
-              sitio oficial</a>
-          </div>
-        </div>
-      </div>
-      <hr />
-    </section>
-	
-	
-    <!-- Sección descargas -->
-   
-	<section id="downloads">
-      <h2 id="a4" class="title">Descargas</h2>
-      <p>En esta sección se encuentran los documentos producidos durante el proyecto.</p>
-      <table class="table__downloads">
-        <tr>
-          <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Carta Presentación</td>
-          <td>
-            <a href="assets/files/#" download="Ejemplo_Cartel_PT1_Matrícula" class="button" target="_blank">Descargar<i
-                class='bx bxs-download icon__downloads'></i></a>
-          </td>
-        </tr>
-        <tr>
-          <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Documento Final</td>
-          <td>
-            <a href="assets/files/#" downloads="Ejemplo_Documento_Final_PT3_Matrícula" class="button"
-              target="_blank">Descargar<i class='bx bxs-download icon__downloads'></i></a>
-          </td>
-        </tr>
-        <tr>
-          <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Presentación Final
-          </td>
-          <td>
-            <a href="assets/files/#" download="Ejemplo_Presentación_PT3_Matrícula" class="button"
-              target="_blank">Descargar<i class='bx bxs-download icon__downloads'></i></a>
-          </td>
-        </tr>
-        <tr>
-          <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Organigrama</td>
-          <td>
-            <a href="assets/files/#" download="Ejemplo_Artículo_Matrícula" class="button" target="_blank">Descargar<i
-                class='bx bxs-download icon__downloads'></i></a>
-          </td>
-        </tr>
-        <tr>
-         
-            <a href="assets/files/DaCapoPresentationArticle" download="Ejemplo_Presentación_Artículo_Matrícula"
-              class="button" target="_blank">Descargar<i class='bx bxs-download icon__downloads'></i></a>
-          </td>
-        </tr>
-      </table>
-      <hr />
-    </section>
-  </main>
   <!-- Pie de página -->
   <footer class="footer">
     <div class="footer__container">
