--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Proyecto: -->
 						<li><a href="#a5">Organigrama</a></li>
 						<li><a href="#a6">Cronograma</a></li>
 						<li><a href="#a7">Productos</a></li>
+						<li><a href="#a8">Avance del diagnóstico</a></li>
 					</ul>
 				</li>
 
@@ -221,7 +222,7 @@ rentabilidad en la empresa Sumideros Z&G.<br> </p>
 </div>
 	</div></p>
 	  
-	 <h2 id="a7">PRODUCTOS</h2>
+	 <h2 id="a8">RESUMEN DEL AVANCE DEL DIAGNOSTICO</h2>
       <p> Para nuestro caso, nos apersonamos directamente ,esto habiendo recibido la carta de presentación dada por la universidad ,esta se nos entrego en la fecha 14/09/2023 .Para esta ocasión el compañero Ccahuana Aranibar,Miguel Ángel fue la persona quien se apersono a la empresa logrando contactar con el encargado del área de marketing Edil Campos .
 <b>Fecha de la visita:</b> 14/09/2023 <br>
 <b>Resultado de contacto:</b> <br>
@@ -231,8 +232,7 @@ No se tenia mucha noción sobre las labores de los trabajadores en cada área ni
 No existía un organigrama porque según se están organizando aun, pero se indico un aproximado.<br>
 Los trabajadores son algo reacios a contestar por el momento.<br>
 El proceso logistico no fue exacto,se requiere otras visitas<br>
-</div>
-	</div></p>
+</div></p>
 	
 	
   <!-- Pie de página -->
