--- a/index.html
+++ b/index.html
@@ -226,8 +226,9 @@ rentabilidad en la empresa Sumideros Z&G.<br> </p>
       <p> Para nuestro caso, nos apersonamos directamente ,esto habiendo recibido la carta de presentación dada por la universidad ,esta se nos entrego en la fecha 14/09/2023 .Para esta ocasión el compañero Ccahuana Aranibar,Miguel Ángel fue la persona quien se apersono a la empresa logrando contactar con el encargado del área de marketing Edil Campos .<br>
 <b>Fecha de la visita:</b> 14/09/2023 <br>
 <b>Resultado de contacto:</b> <br>
-Se logro obtener información referente a la historia de la empresa,misión,visión,valores, áreas funcionales, organigrama y proceso logístico.<br>
+Se logro obtener cierta información referente a la empresa,misión,visión,valores, áreas funcionales, organigrama y proceso logístico.<br>
 <b>Observaciones: </b><br>
+-No se tenia mucha noción sobre las labores de los trabajadores en cada área ni los nombres de cada uno.<br>
 -No se tenia mucha noción sobre las labores de los trabajadores en cada área ni los nombres de cada uno.<br>
 -No existía un organigrama porque según se están organizando aun, pero se indico un aproximado.<br>
 -Los trabajadores son algo reacios a contestar por el momento.<br>
